--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css(.tmp) styles/main.css -->
+        <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
     </head>
@@ -30,7 +31,7 @@
                     </ul>
                 </nav>
                 <hgroup>
-                    <h2>MY TAKE ON THINGS</h2>
+                    <h2>MY TAKE ON THINGS............</h2>
                     <h3>Not much else...</h3>
                 </hgroup>
             </div>
