Added media queries

--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,7 @@
         <![endif]-->
 
         <header id="primary-header">
+            <div class="overlay"></div>
             <div class="content-wrapper">
                 <!--<img src="#" alt="Poplinr Logo">-->
                 <h1>Poplinr</h1>
@@ -112,7 +113,7 @@
                 </aside>
             </div>
         </section>
-        <section class="sub-section">
+        <!--<section class="sub-section">
             <h2>MOST POPULAR POSTS...</h2>
         </section>
         <section class="sub-section">
@@ -128,7 +129,7 @@
             <a href="#"><div class="post-block-link">
                 <h4>Post...</h4>
             </div></a>
-        </section>
+        </section>-->
         <footer>
             <div class="content-wrapper">
                 <!--<img src="#" alt="Mini Logo">-->
