Added another section

--- a/app/index.html
+++ b/app/index.html
@@ -113,10 +113,10 @@
                 </aside>
             </div>
         </section>
-        <!--<section class="sub-section">
+        <section class="sub-section">
             <h2>MOST POPULAR POSTS...</h2>
         </section>
-        <section class="sub-section">
+        <!--<section class="sub-section">
             <a href="#"><div class="post-block-link">
                 <h4>Post...</h4>
             </div></a>
@@ -134,14 +134,14 @@
             <div class="content-wrapper">
                 <!--<img src="#" alt="Mini Logo">-->
                 <p>Poplinr | 2013. No Rights Reserved...</p>
-                <nav class="footer-nav">
+                <!--<nav class="footer-nav">
                     <ul>
                         <li class="li-padding-right"><a href="#">Nav One</a></li>
                         <li class="border-left"><a href="#">Nav Two</a></li>
                         <li class="border-left"><a href="#">Nav Three</a></li>
                         <li class="border-left"><a href="#">Nav Four</a></li>
                     </ul>
-                </nav>
+                </nav>-->
             </div>
         </footer>
         
